further cleaning matches data

--- a/01_Obtain_data/08_get_match_details.ipynb
+++ b/01_Obtain_data/08_get_match_details.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "6b289dee",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "b2bc0118",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "id": "81958106",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "id": "35d87592",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "id": "f2217cc1",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "id": "513ebc5c",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "id": "fa5cc26b",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 24,
    "id": "0886baa0",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "id": "76f38044",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "id": "edda540a",
    "metadata": {},
    "outputs": [],
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "id": "b60e57f6",
    "metadata": {},
    "outputs": [
@@ -485,29 +485,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 184 events found in latest MASTER: ../Data/Master/Events/20251101__master_events.csv \n",
+      "✅ 186 events found in latest MASTER: ../Data/Master/Events/20251105__master_events.csv \n",
       "--- 🟠 Finding  all event ids and payloads from ../Data/Processed/Singles_match_payloads ---\n",
-      "--- ✅ All desired payloads: Found 24382 total unique matches to scrape. ---\n",
+      "--- ✅ All desired payloads: Found 24469 total unique matches to scrape. ---\n",
       "--- 🟠 Finding already obtained match details from ../Data/Raw/Match_details ---\n",
-      "--- ✅ Found 24381 total unique match details across 184 files. ---\n",
+      "--- ✅ Found 24390 total unique match details across 184 files. ---\n",
       "--- ✅ Unique Events with Data: 184 ---\n",
       "\n",
-      "🏓 Matches to scrape: 1 across 1 events 🏓\n",
-      "--- 🚀 Starting initial scrape for 1 matches... ---\n",
-      "--- 🚀 Launching 1 tasks concurrently... ---\n",
-      "                                                                                \n",
+      "🏓 Matches to scrape: 79 across 2 events 🏓\n",
+      "--- 🚀 Starting initial scrape for 79 matches... ---\n",
+      "--- 🚀 Launching 79 tasks concurrently... ---\n",
+      "                                                                                  \n",
       "==================================================\n",
-      "🟢 Successfully fetched: 1 tasks 🟢\n",
+      "🟢 Successfully fetched: 79 tasks 🟢\n",
       "Failed to fetch (ready for retry): 0 tasks\n",
-      "--- Attempt 1 finished in 0.83s. Got 1 new results. ---\n",
+      "--- Attempt 1 finished in 1.90s. Got 79 new results. ---\n",
       "\n",
       "==================================================\n",
       "--- ✅🏓🟢 Scraping Complete. All tasks finished successfully. 🟢🏓✅---\n",
-      "Total successful matches collected: 1\n",
-      "Total Wall Clock Time: 0.83 seconds.\n",
+      "Total successful matches collected: 79\n",
+      "Total Wall Clock Time: 1.90 seconds.\n",
       "--- 💾 Saving data to disk (Read-Modify-Write) ---\n",
-      "✅ Updated Event 2410: Added 1 new matches (Total: 214).\n",
-      "--- ✅ All successful events written to disk. (1 files) ---\n"
+      "✅ Updated Event 3100: Added 22 new matches (Total: 22).\n",
+      "--- ✅ All successful events written to disk. (2 files) ---\n"
      ]
     }
    ],
@@ -657,17 +657,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "id": "21ed3fc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24381"
+       "24390"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "id": "11c97e59",
    "metadata": {},
    "outputs": [
@@ -686,53 +686,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 184 events found in latest MASTER: ../Data/Master/Events/20251101__master_events.csv \n",
+      "✅ 186 events found in latest MASTER: ../Data/Master/Events/20251105__master_events.csv \n",
       "--- 🟠 Finding  all event ids and payloads from ../Data/Processed/Singles_match_payloads ---\n",
-      "--- ✅ All desired payloads: Found 24382 total unique matches to scrape. ---\n",
+      "--- ✅ All desired payloads: Found 24469 total unique matches to scrape. ---\n",
       "--- 🟠 Finding already obtained match details from ../Data/Raw/Match_details ---\n",
-      "--- ✅ Found 24381 total unique match details across 184 files. ---\n",
-      "--- ✅ Unique Events with Data: 184 ---\n",
+      "--- ✅ Found 24469 total unique match details across 186 files. ---\n",
+      "--- ✅ Unique Events with Data: 186 ---\n",
       "\n",
-      "🏓 Matches to scrape: 1 across 1 events 🏓\n",
-      "--- 🚀 Starting initial scrape for 1 matches... ---\n",
-      "--- 🚀 Launching 1 tasks concurrently... ---\n",
-      "                                                                                \n",
-      "==================================================\n",
-      "🟢 Successfully fetched: 0 tasks 🟢\n",
-      "Failed to fetch (ready for retry): 1 tasks\n",
-      "--- 1 tasks failed and will be retried. ---\n",
-      "\n",
-      "--- 🔄 Starting Retry 1/3 for 1 remaining matches... ---\n",
-      "--- 🚀 Launching 1 tasks concurrently... ---\n",
-      "                                                                                \n",
-      "==================================================\n",
-      "🟢 Successfully fetched: 0 tasks 🟢\n",
-      "Failed to fetch (ready for retry): 1 tasks\n",
-      "--- 1 tasks failed and will be retried. ---\n",
-      "\n",
-      "--- 🔄 Starting Retry 2/3 for 1 remaining matches... ---\n",
-      "--- 🚀 Launching 1 tasks concurrently... ---\n",
-      "                                                                                \n",
-      "==================================================\n",
-      "🟢 Successfully fetched: 0 tasks 🟢\n",
-      "Failed to fetch (ready for retry): 1 tasks\n",
-      "--- 1 tasks failed and will be retried. ---\n",
-      "\n",
-      "--- 🔄 Starting Retry 3/3 for 1 remaining matches... ---\n",
-      "--- 🚀 Launching 1 tasks concurrently... ---\n",
-      "                                                                                \n",
-      "==================================================\n",
-      "🟢 Successfully fetched: 0 tasks 🟢\n",
-      "Failed to fetch (ready for retry): 1 tasks\n",
-      "--- 1 tasks failed and will be retried. ---\n",
+      "🏓 Matches to scrape: 0 across 0 events 🏓\n",
       "\n",
       "==================================================\n",
-      "--- ⚠️ Scraping Complete. 1 tasks permanently failed after 4 attempts. ---\n",
+      "--- ✅🏓🟢 Scraping Complete. All tasks finished successfully. 🟢🏓✅---\n",
       "Total successful matches collected: 0\n",
-      "Total Wall Clock Time: 3.38 seconds.\n",
+      "Total Wall Clock Time: 0.00 seconds.\n",
       "\n",
-      "--- ✅ All successful events written to disk. (0 files) ---\n",
-      "--- ✅ Failure log saved for 1 tasks to ../Data/Raw/failure_log_match_details.csv ---\n"
+      "--- ✅ All successful events written to disk. (0 files) ---\n"
      ]
     }
    ],
@@ -848,51 +816,6 @@
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"--- ❌ FAILED to save failure log: {e} ---\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "05ac0421",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "match_tuple= (2410,\"TTEMSINGLES-----------RND2001100----------\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "940371ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async with aiohttp.ClientSession() as session:\n",
-    "    match_fail_resp = await get_match_details(session,match_tuple,0,0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "a398b4a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(False,\n",
-       " None,\n",
-       " (2410, 'TTEMSINGLES-----------RND2001100----------'),\n",
-       " \"Task failed with error: Validation Error (Field 'competitiors.0.players.0.playerId' missing)\")"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "match_fail_resp"
    ]
   },
   {
